--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,3 +3,5 @@ $theme_1-text: #fafaff;
 $theme_2: #3a3636;
 $theme_2-content: #161515;
 $theme_3: rgb(224, 157, 12);
+$task_btn: rgb(52, 121, 248);
+$task_list: rgb(94, 95, 97);
