--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,6 @@
 @import "./components/theme-colors";
 @import "./components/thems.scss";
 @import "./components/btn";
+@import "./layout/app_layout";
+@import "./components/tasks";
+@import "./components/form";
