--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -1,11 +1,10 @@
 .link {
-  @include flexCenter;
+  @include flexPos;
   width: 300px;
   height: 40px;
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  background-color: #fff;
   border-radius: 10px;
   outline: none;
   &:hover .link_btn-effect {
@@ -16,7 +15,7 @@
     @include btnSize;
     border: none;
     cursor: pointer;
-    background-color: #fff;
+    background-color: transparent;
     border: 20px;
     outline: none;
     color: rgb(255, 255, 255);
@@ -38,5 +37,21 @@
     left: 0;
     background-color: rgb(32, 33, 34);
     transition: width 0.3s ease-in-out;
+  }
+}
+
+.create_task {
+  width: 160px;
+  padding: 5px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  background-color: $task_btn;
+  color: $theme_1-text;
+  font-size: 14px;
+  cursor: pointer;
+  &:hover {
+    background-color: darken($task_btn, 10%);
   }
 }
