--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,3 +5,11 @@ $theme_2-content: #161515;
 $theme_3: rgb(224, 157, 12);
 $task_btn: rgb(52, 121, 248);
 $task_list: rgb(94, 95, 97);
+$task_selected: #0ea2cf;
+
+$priority_important: #965657;
+$priority_family: #c96567;
+$priority_deadline: #e8a87c;
+$priority_fun: #85dccb;
+
+$priority_colors: 1 #965657, 2 #c96567, 3 #e8a87c, 4 #85dccb;
