--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,7 @@
 @import "./layout/app_layout";
 @import "./components/tasks";
 @import "./components/form";
+@import "./components/status-modal";
+@import "./components/overlay";
+@import "./components/priority-modal";
+@import "./components/task_modal-overlay";
