--- a/scss/components/_tasks.scss
+++ b/scss/components/_tasks.scss
@@ -3,11 +3,12 @@
   color: #000;
   font-weight: bold;
   font-size: 1.5rem;
+  z-index: -1;
 }
 .tasks_wrapper {
   padding: 20px 30px;
   height: 100%;
-
+  position: relative;
   // overflow: scroll;
 }
 
