--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -7,8 +7,23 @@
   margin: 0 auto;
   border-radius: 10px;
   outline: none;
+  .link_btn-effect {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    svg {
+      width: 20px;
+      height: 10;
+      margin-left: 20px;
+      color: rgb(241, 140, 8);
+      transition: all 0.5s ease-in-out;
+    }
+  }
   &:hover .link_btn-effect {
     width: 100%;
+  }
+  &:hover svg {
+    transform: translateX(300%);
   }
 
   &-btn {
@@ -19,7 +34,9 @@
     border: 20px;
     outline: none;
     color: rgb(255, 255, 255);
-
+    i {
+      z-index: 5000;
+    }
     .txt {
       z-index: 10;
       opacity: 0.8;
@@ -36,7 +53,7 @@
     width: 20%;
     left: 0;
     background-color: rgb(32, 33, 34);
-    transition: width 0.3s ease-in-out;
+    transition: width 0.5s ease-in-out;
   }
 }
 
