--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -13,3 +13,5 @@ $priority_deadline: #e8a87c;
 $priority_fun: #85dccb;
 
 $priority_colors: 1 #965657, 2 #c96567, 3 #e8a87c, 4 #85dccb;
+
+$toDo_colors: 1 #23ceb7, 2 #ccb00f, 3 #64df2b;
