--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,4 @@
 @import "./components/overlay";
 @import "./components/priority-modal";
 @import "./components/task_modal-overlay";
+@import "./components/update_modal";
