--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -45,12 +45,7 @@
       }
       &-description {
         @include form_btn(13px);
-        overflow: hidden;
-        resize: none;
-        height: 20px;
-        padding-bottom: 30px;
-        padding-top: 10px;
-        margin-bottom: 80px;
+        @include textArea;
       }
       &-title {
         display: inline-block;
@@ -94,20 +89,26 @@
         margin-bottom: 30px;
         width: 100px;
         text-align: center;
-        .set-priority {
+        cursor: pointer;
+        z-index: 32;
+        &:nth-child(3) {
+          cursor: unset;
+        }
+        h4 {
+          font-size: 12px;
+          color: darken($theme_1, 10%);
+
+          padding-bottom: 2px;
         }
         label {
+          cursor: pointer;
           display: inline-block;
-          margin-top: 3px;
           border-radius: 10px;
           width: 100px;
           height: 20px;
-          padding-top: 2px;
-          background-color: #fff;
           text-align: center;
           color: $theme_1;
           font-weight: bolder;
-          cursor: pointer;
         }
       }
     }
