--- a/scss/components/_status-modal.scss
+++ b/scss/components/_status-modal.scss
@@ -21,11 +21,17 @@
   }
   .status_list {
     width: 300px;
+    @each $color in $toDo_colors {
+      &-li:nth-child(#{nth($color, 1)}) {
+        background-color: nth($color, 2);
+      }
+    }
     &-li {
       padding: 10px;
       border-bottom: 1px solid rgb(196, 183, 183);
       transition: background-color 0.4s ease-in;
       position: relative;
+
       .status_icon {
         color: green;
         position: absolute;
@@ -36,7 +42,7 @@
         visibility: visible;
       }
       &:hover {
-        background-color: #e5e5eb;
+        opacity: 0.9;
         cursor: pointer;
       }
     }
