form update added

--- a/css/main.css
+++ b/css/main.css
@@ -598,6 +598,9 @@ a {
   position: absolute;
   width: 100%;
   max-width: 350px;
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
   border-radius: 10px;
   left: 50%;
   transform: translateX(-50%); }
@@ -705,3 +708,7 @@ a {
         outline: none; }
         .update_wrapper .update_modal .form-end .update-save:hover {
           font-weight: bold; }
+
+.showUpdateModal {
+  visibility: visible;
+  opacity: 1; }
