form style and counter tasks updated

--- a/css/main.css
+++ b/css/main.css
@@ -313,8 +313,7 @@ a {
 
 .form_container {
   position: absolute;
-  width: 100%;
-  padding: 0 10px;
+  padding: 10px;
   transition: all 0.4s ease-in-out;
   visibility: hidden;
   transform: translate(2%, -5%);
@@ -326,7 +325,8 @@ a {
     background-color: #fff;
     border-radius: 10px;
     max-width: 500px;
-    position: relative; }
+    position: relative;
+    padding-top: 20px; }
     .form_container .form_wrap {
       display: flex;
       padding: 10px; }
@@ -431,10 +431,10 @@ a {
   visibility: visible;
   z-index: 90;
   opacity: 1;
-  transform: translate(5%, 20%); }
+  transform: translate(5%, 10%); }
   @media (max-width: 700px) {
     .form_modal-Show {
-      transform: translate(-2%, 1%); } }
+      transform: translate(-2%, -2.5%); } }
 
 .status_wrapper {
   position: absolute;
@@ -664,7 +664,7 @@ a {
         cursor: pointer;
         position: relative;
         margin-bottom: 20px;
-        font-weight: normal; }
+        font-weight: bold; }
       .update_wrapper .update_modal .info span {
         margin-left: 10px;
         display: inline-block;
