--- a/scss/components/_update_modal.scss
+++ b/scss/components/_update_modal.scss
@@ -50,7 +50,7 @@
         cursor: pointer;
         position: relative;
         margin-bottom: 20px;
-        font-weight: normal;
+        font-weight: bold;
       }
       span {
         margin-left: 10px;
@@ -87,6 +87,7 @@
         background-color: #fff;
         border-right: 1px solid rgb(22, 62, 85);
       }
+
       .update-save {
         width: 140px;
         background-color: #fff;
