--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -8,10 +8,11 @@ $task_list: rgb(94, 95, 97);
 $task_selected: #0ea2cf;
 
 $priority_important: #965657;
-$priority_family: #c96567;
+$priority_family: #2880a3;
 $priority_deadline: #e8a87c;
 $priority_fun: #85dccb;
 
-$priority_colors: 1 #965657, 2 #c96567, 3 #e8a87c, 4 #85dccb;
+$priority_colors: 1 #965657, 2 #e8a87c, 3 #2880a3, 4 #85dccb;
 
 $toDo_colors: 1 #23ceb7, 2 #ccb00f, 3 #64df2b;
+// #c96567
