--- a/scss/components/_tasks.scss
+++ b/scss/components/_tasks.scss
@@ -7,8 +7,9 @@
 }
 .tasks_wrapper {
   padding: 20px 30px;
-  height: 100%;
   position: relative;
+  max-height: 460px;
+
   // overflow: scroll;
 }
 
